Changelog
=========

3.6 (unreleased)
----------------

- Nothing changed yet.


3.5.1 (2014-08-21)
------------------

* fixes MANIFEST.in in order to fix last broken release

3.5 (2014-08-20)
----------------

* return the correctly rendered page when calling the RichDocument context
* moved to github
  [petschki]
* removed document_relateditems macro, caused problems with p.a.multilingual
  [agitator]

3.4 - 2012-01-23
----------------

* Use getWidth/getHeight for image attachment thumbnails to prevent
  unauthorized errors.
  [mj]

3.3 - 2011-10-06
----------------

* Added Upload adapter for TinyMCE.
   [tesdal]

3.2 - April 28, 2010
--------------------

* remove dependency Simple Attachment in metadata.xml to
  import step since installing the product via metadata.xml
  will fail since kupu does not think the RichDocument portal
  is available when Simple Attachment is registering it's
  kupu linkable types.
  [vangheem]


3.1 - April 21, 2010
--------------------

* registerType need to support project name for Plone 4 support
  [vangheem]

* fixed is_editable call for Plone 4
  [vangheem]

* handle kupu linkable installation
  [vangheem]

* remove Extensions install directory
  [vangheem]

* fixed bulgarian translation
  [vangheem]


3.0.2 - February 19, 2008
-------------------------

* Register the skin layers for all skins. Without this RichDocument would
  not work when installed in sites using a custom theme.
  [wichert]

* Repackaged RichDocument in egg form
  [wichert]

* Modernise installation logic to use GenericSetup better.
  [optilude]

* Set "add" permissions to make contributor role work properly .
  [optilude]

* Add i18n domain to the zcml files to make the package title and
  FTI information translatable in the RichDocument domain.
  [optilude]