@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <version>3.2</version>
+    <dependencies>
+        <dependency>profile-Products.SimpleAttachment:default</dependency>
+    </dependencies>
 </metadata>
