@@ -4,7 +4,8 @@ Changelog
 3.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+* fixes circular dependencies via generic setup
+  [benniboy]
 
 
 3.5.1 (2014-08-21)
